--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,26 +43,26 @@
 					<div class="input-group">
 						<span class="input-group-addon">&gt;</span>
 						<input id="likes_lt" class="form-control"
-							placeholder="More than..."></input>
+							   placeholder="More than..."/>
 					</div>
 					<div class="input-group">
 						<span class="input-group-addon">&lt;</span>
 						<input id="likes_gt" class="form-control"
-							placeholder="Less than..."></input>
+							   placeholder="Less than..."/>
 					</div>
 				</div>
 			</div>
 		</div>
-		<table id="users" class="table">
+		<table class="table" id="sample">
 			<thead>
-				<tr>
-					<th>id</th>
-					<th>name</th>
-					<th>role</th>
-					<th>status</th>
-					<th>town</th>
-					<th>likes</th>
-				</tr>
+			<tr>
+				<th>id</th>
+				<th>name</th>
+				<th>role</th>
+				<th>status</th>
+				<th>town</th>
+				<th>likes</th>
+			</tr>
 			</thead>
 		</table>
 	</div>
